--- a/style.css
+++ b/style.css
@@ -744,6 +744,7 @@ footer {
 @media (max-width: 768px) {
     #splash-logo { transform: translate(-50%, -50%) scale(2.5); }
     .hero-content { padding: 40px 20px; }
+    .hero-content p { text-align: justify; } 
     .hero h1 { font-size: 1.8rem; margin-bottom: 30px; }
     .btn-main { margin-top: 50px; }
     .hero-video-container { opacity: 1; }
